--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-generator": "^4.16.1",
+    "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "sequelize": "^6.24.0",
     "sequelize-cli": "^6.5.1"
